# doc-manager

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  UPGRADE_SESSION_2026-04-08.md
.github/workflows/: doc-manager-AutoDeployTrigger-7bbdffaa-f559-45f2-8422-2abe12bab395.yml  rust-rocker-vite-react-AutoDeployTrigger-7bbdffaa-f559-45f2-8422-2abe12bab395.yml
doc-manager-backend/: Cargo.toml  Dockerfile
doc-manager-backend/src/: main.rs
doc-manager-frontend/: Dockerfile  package-lock.json  vite.config.js
doc-manager-frontend/src/: App.jsx
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  start_frontend_dev.bat  vite.config.js
frontend/src/: App.css  App.jsx  crypto.js  index.css
frontend/src/test/: App.test.jsx  crypto.test.js  setup.js
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/: main.rs
