[package]
name = "docs-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
rocket_cors = "0.6.0"
azure_storage_blobs = "0.21.0"
azure_storage = "0.21.0"
futures = "0.3.31"
